# harness-mcp

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: release.yml
opencode-plugin/: index.js  package.json
src/harness_mcp/: __init__.py  __main__.py  catalog.py  cli.py  core.py
src/harness_mcp/catalog_data/: builtin.py
src/harness_mcp/harnesses/: __init__.py  base.py  opencode.py
tests/: test_catalog.py
