[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-mcp"
version = "0.1.0"
description = "Add high-quality MCP servers to any AI harness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sunny" }]
keywords = ["mcp", "ai", "opencode", "claude", "cursor", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.0",
    "json5>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
interactive = [
    "questionary>=2.0",
]
yaml = [
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
harness-mcp = "harness_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
