[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-mcp"
version = "0.1.1"
description = "Add high-quality MCP servers to any AI harness — opencode, claude code, cursor, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "ai", "opencode", "claude", "cursor", "harness"]
authors = [{name = "Sunny", email = "suvenkatesh97@users.noreply.github.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6"]
interactive = [
    "harness-mcp[yaml]",
    "questionary>=2",
]
dev = [
    "harness-mcp[yaml]",
    "harness-mcp[interactive]",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.9",
]

[project.scripts]
harness-mcp = "harness_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/suvenkatesh97/harness-mcp"
Repository = "https://github.com/suvenkatesh97/harness-mcp"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
